--- a/src/main/resources/static/css/phyweb.css
+++ b/src/main/resources/static/css/phyweb.css
@@ -32,7 +32,7 @@ body {
     color: #fff;
     border-radius: 0;
     position: relative;
-    background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('/img/jumbotron.jpg');
+    background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('https://ws1.sinaimg.cn/large/0070O95Yly1g2ak4bo2fdj31hc0jvdu9.jpg');
     background-size: cover;
     display:flex;
     align-items:center;
