--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" layout:decorator="base">
 
+<head>
+    <title>PhyLab - 实验报告中心</title>
+</head>
+
 <th:block layout:fragment="links">
     <!-- fomantic-ui table -->
     <link href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/components/table.min.css" rel="stylesheet">
