--- a/src/main/resources/static/css/phyweb.css
+++ b/src/main/resources/static/css/phyweb.css
@@ -15,6 +15,16 @@ body {
 }
 
 
+/*  */
+.my-container {
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+
 /* 导航栏头像 */
 .navbar .nav-item img {
     width: 40px;
@@ -73,4 +83,54 @@ body {
 #report-data-input-modal .table>thead>tr>th,
 #report-data-input-modal table tbody td {
     border-top: 1px solid #ddd;
+}
+
+/* 个人中心 */
+.profile-user-info {
+    display: table;
+    width: 98%;
+    width: calc(100% - 24px);
+    margin: 0 auto;
+}
+.profile-picture {
+    border: 1px solid #CCC;
+    background-color: #FFF;
+    padding: 4px;
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .15);
+    max-width: 250px;
+}
+.profile-picture img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+.profile-info-name {
+    text-align: right;
+    padding: 6px 10px 6px 4px;
+    font-weight: 400;
+    color: #667E99;
+    background-color: transparent;
+    width: 110px;
+    vertical-align: middle;
+}
+.profile-info-value {
+    padding: 6px 4px 6px 6px;
+}
+.profile-info-value a {
+    color: #337ab7;
+    text-decoration: none;
+}
+.profile-info-name, .profile-info-value {
+    display: table-cell;
+    border-top: 1px dotted #D5E4F1;
+}
+.profile-info-row:first-child .profile-info-name, .profile-info-row:first-child .profile-info-value {
+    border-top: none;
+}
+.profile-info-row {
+    display: table-row;
 }
