--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -65,7 +65,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <th:block layout:fragment="content">
             <!-- Main Content -->
         </th:block>
@@ -75,9 +75,9 @@
             <div class="container">
                 <div class="row">
                         <div class="col mr-auto my-auto">
-                            <a href="/about">Start Bootstrap</a>
+                            <a href="#">PhyLab</a>
                             is a project created and maintained by
-                            <a href="http://davidmiller.io">David Miller</a>.
+                            <a href="#">BUAA-SE-GROUP</a>.
                             <br>
                             Themes, templates, and snippets licensed
                             <a href="https://opensource.org/licenses/MIT">MIT</a>, Start Bootstrap website
