--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -19,7 +19,7 @@
                 数据处理与报告生成
             </h2>
             <hr style="border-top: 1px solid rgba(52,58,64,.5); width: 320px; margin: 12px auto 20px;">
-            <div class="card mt-3 p-3" style="background: #fff; border-radius: 10px; flex: 1;">
+            <div class="card mt-3 p-3 shadow-sm" style="background: #fff; border-radius: 10px; flex: 1;">
                 <h5 class="text-center">
                     <i class="far fa-list-alt" style="font-size:90%"></i>
                     实验列表
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-lg-6">
-            <div class="card"  style="background: #f5f5f5; padding: 0; border-radius: 10px;">
+            <div class="card shadow-sm"  style="background: #f5f5f5; padding: 0; border-radius: 10px;">
                 <h5 class="text-center pt-2 text-dark" >
                     <i style="font-size:85%" class="far fa-file-pdf"></i> 
                     实验报告
