--- a/src/main/resources/static/css/phyweb.css
+++ b/src/main/resources/static/css/phyweb.css
@@ -1,6 +1,13 @@
 
 body {
     background: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main {
+    flex: 1;
 }
 
 .navbar-brand {
@@ -22,6 +29,7 @@ body {
     border: 1px solid #ddd;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    box-shadow: 0 1px 3px rgba(50,50,50,.1);
 }
 
 
@@ -38,7 +46,7 @@ body {
 
 .my-jumbotron {
     width: 100%;
-    height: 500px;
+    height: 550px;
     color: #fff;
     border-radius: 0;
     position: relative;
