--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -2,14 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org" layout:decorator="base">
 
 <head>
-    <title>PhyLab - 个人信息</title>
+    <title>PhyLab - 修改个人信息</title>
 </head>
 
 <th:block layout:fragment="content">
     <div class="container my-container">
         <div class="pl-4 pb-2 mt-3 mb-2 border-bottom d-flex flex-row">
-            <h3 style="display: inline-block; flex: 1 ">个人中心</h3>
-            <a href="/edit-profile" class="btn-sm btn btn-outline-info align-self-center " style="display:none;">修改个人信息</a>
+            <h3 style="display: inline-block; flex: 1 ">修改个人信息</h3>
         </div>
         <div class="row py-5 px-2">
             <div class="col-xs-12 col-md-3 offset-md-1 text-center">
