--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:shiro="http://www.w3.org/1999/xhtml">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="icon" href="/img/favicon.png" type="image/png" />
     <meta http-equiv=Content-Type content="text/html;charset=utf-8">
-    <link href="https://at.alicdn.com/t/font_1153083_j5ucjqyx1qa.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/phyweb.css" rel="stylesheet">
+    <link href="https://at.alicdn.com/t/font_1153083_j5ucjqyx1qa.css" rel="stylesheet" th:href="@{https://at.alicdn.com/t/font_1153083_j5ucjqyx1qa.css}">
+    <link href="https://cdn.bootcss.com/font-awesome/5.8.1/css/all.min.css" rel="stylesheet" th:href="@{https://cdn.bootcss.com/font-awesome/5.8.1/css/all.min.css}">
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" th:href="@{https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css}">
+    <link href="../static/css/phyweb.css" rel="stylesheet" th:href="@{/css/phyweb.css}">
     <th:block layout:fragment="links">
         <!-- More Links -->
     </th:block>
@@ -100,10 +102,11 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/pdfobject/2.1.1/pdfobject.min.js"></script>
-    <script src="./js/global.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js" th:src="@{https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js}"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"th:src="@{https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <script src="https://cdn.bootcss.com/pdfobject/2.1.1/pdfobject.min.js" th:src="@{https://cdn.bootcss.com/pdfobject/2.1.1/pdfobject.min.js}"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js" th:src="@{https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js}" ></script>
+    <script src="./js/global.js" th:src="@{/js/global.js}"></script>
     <th:block layout:fragment="scripts">
         <!-- More Scripts -->
     </th:block>
