--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" layout:decorator="base">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorator="base" xmlns:layout="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>注册账号</title>
+    <meta charset="utf-8" />
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 </head>
 
 <th:block layout:fragment="content">
@@ -17,10 +22,12 @@
             </span>
         </div>
         <form id="register_form" class="col-md-6 offset-md-3" action="/register" method="post">
-            <div id="login-message-alert" th:if="${message}" style="text-align:initial; margin-top: 20px;">
-                <button type="button" class="close" data-dismiss="alert" onclick="deleteMessage()" id="demo_1">x</button>
-                <span th:text="${message}" id="demo_2" style="color: red"></span>
-            </div>   
+
+            <div class="alert alert-danger alert-dismissible"  th:if="${message}" >
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong th:text="${message}"></strong>
+            </div>
+
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="email">邮箱：</label>
                 <input id="email" name="email" type="email" class="form-control" placeholder="请输入邮箱" required>
@@ -57,5 +64,10 @@
             var form_submit = document.getElementById('register_form');
             form_submit.submit();
         }
+    }
+    function deleteMessage(){
+        document.getElementById("demo_1").style.display="none";
+        document.getElementById("demo_2").style.display="none";
+        document.getElementById(" login-message-alert").style.display="none";
     }
 </script>
