--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -60,7 +60,7 @@
                     <button  class="btn btn-primary btn-block"  type="submit">确认</button>
                 </div>
                 <div class="hr hr-8 dotted"></div>
-                </form>>
+                </form>
             </div>
         </div>
     </div>
