--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -34,7 +34,6 @@
                             >
                         </div>
                     </div>
-
                     <div class="profile-info-row">
                         <div class="profile-info-name"> 性别 </div>
                         <div class="profile-info-value">
@@ -42,7 +41,6 @@
                             <label class="radio-inline" style="font-size: 20px"><input type="radio" name="sex" value="female">female</label>
                         </div>
                     </div>
-
                     <div class="profile-info-row">
                         <div class="profile-info-name"> 学校 </div>
                         <div class="profile-info-value">
@@ -54,10 +52,13 @@
                     <div class="profile-info-row">
                         <div class="profile-info-name">自我介绍</div>
                         <div class="profile-info-value">
-                            <textarea class="profile-info-textarea"  name="introduction" placeholder="一句话介绍自己" rows="4" maxlength="100" required ></textarea>
+                            <textarea class="profile-info-textarea"  name="introduction" placeholder="一句话介绍自己" rows="4" maxlength="100" required >
+                            </textarea>
+                            <br>
+                            <button  class="my-button" type="submit">确认</button>
                         </div>
                     </div>
-                    <button  class="btn btn-primary btn-block"  type="submit">确认</button>
+
                 </div>
                 <div class="hr hr-8 dotted"></div>
                 </form>
