--- a/src/main/resources/templates/emailmodule.html
+++ b/src/main/resources/templates/emailmodule.html
@@ -131,8 +131,8 @@
             <b class="xtop"><b class="xb1"></b><b class="xb2"></b><b class="xb3"></b><b class="xb4"></b></b>
             <div class="xboxcontent">
                 <div class="neirong">
-                    <p><b>请核对你的邮箱：</b><span id="userName" class="font_darkblue">[[${email}]]</span></p>
-                    <p><b>重置密码的验证码：</b><span class="font_lightblue"><span id="yzm"  onclick="return false;"
+                    <p><b>请核对您的邮箱：</b><span id="userName" class="font_darkblue">[[${email}]]</span></p>
+                    <p><b>您的的验证码：</b><span class="font_lightblue"><span id="yzm"  onclick="return false;"
                        style="border-bottom: 1px dashed rgb(204, 204, 204); z-index: 1; position: static;">[[${resetCode}]]</span>
                     </span><br><span class="font_gray">验证码30分钟内有效！</span></p>
                     <div class="line">如果你未重置密码，请忽略该邮件。</div>
