--- a/src/main/resources/templates/emailmodule2.html
+++ b/src/main/resources/templates/emailmodule2.html
@@ -131,7 +131,7 @@
             <b class="xtop"><b class="xb1"></b><b class="xb2"></b><b class="xb3"></b><b class="xb4"></b></b>
             <div class="xboxcontent">
                 <div class="neirong">
-                    <p><b>请核对你的邮箱：</b><span id="userName" class="font_darkblue">[[${email}]]</span></p>
+                    <p><b>请核对您的邮箱：</b><span id="userName" class="font_darkblue">[[${email}]]</span></p>
                     <p><b>您重置后的密码为：</b><span class="font_lightblue"><span id="yzm"  onclick="return false;"
                     style="border-bottom: 1px dashed rgb(204, 204, 204); z-index: 1; position: static;">[[${resetCode}]]</span>
                     <div class="line">如果你未重置密码，请忽略该邮件。</div>
