--- a/src/main/resources/templates/reset.html
+++ b/src/main/resources/templates/reset.html
@@ -22,7 +22,7 @@
                 <h5 class="mt-2">登陆 PhyLab，发现物理实验的乐趣</h5>
             </span>
         </div>
-        <form class="col-md-6 offset-md-3" action="/reset-email" method="post">
+        <form class="col-md-6 offset-md-3" action="/reset-email" method="post" id="myForm">
             <div class="alert alert-danger alert-dismissible"  th:if="${failMessage}" >
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <strong th:text="${failMessage}"></strong>
@@ -37,8 +37,8 @@
                 <div class="input-group-prepend">
                     <span class="btn btn-outline-secondary" >请输入邮箱<span>
                 </div>
-                <input type="email"  class="form-control" name="email"  id="email" maxlength="50"  required th:value="${useremail}">
-                    <button class="btn btn-success" type="submit"  >获取验证码</button>
+                <input type="email"  class="form-control" name="email"  id="email" maxlength="50"  th:value="${useremail}" required>
+                    <button class="btn btn-success" type="submit" id="btnSend" >获取验证码</button>
                 </div>
         </form>
         <form class="col-md-6 offset-md-3" action="/reset" method="post">
@@ -49,7 +49,7 @@
                 </div>
                 <input type="text" class="form-control" maxlength="6" required  name="resetCode">
             </div>
-            <button class="btn mt-2 btn-primary btn-block" type="submit" onclick="copy()">找回密码</button>
+            <button class="btn mt-2 btn-primary btn-block" type="submit"  onclick="copy()">找回密码</button>
         </form>
     </div>
 
