--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -52,8 +52,7 @@
                     <div class="profile-info-row">
                         <div class="profile-info-name">自我介绍</div>
                         <div class="profile-info-value">
-                            <textarea class="profile-info-textarea"  name="introduction" placeholder="一句话介绍自己" rows="4" maxlength="100" required >
-                            </textarea>
+                            <textarea class="profile-info-textarea"  name="introduction" placeholder="一句话介绍自己" rows="4" maxlength="100" required ></textarea>
                             <br>
                             <button  class="my-button" type="submit">确认</button>
                         </div>
