--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,11 +40,11 @@
 
             <div class="form-group">
                 <label for="email">邮箱：</label>
-                <input id="email" name="username" type="email" class="form-control" placeholder="请输入邮箱" required >
+                <input id="email" name="username"  maxlength="50"  type="email" class="form-control" placeholder="请输入邮箱"  required  >
             </div>
             <div class="form-group">
                 <label for="password">密码：</label>
-                <input id="password" name="password" type="password" class="form-control" placeholder="请输入密码" required>
+                <input id="password" name="password" maxlength="30" type="password" class="form-control"  placeholder="请输入密码" required>
             </div>
             <div class="form-group form-check">
                 <input id="remember-me" type="checkbox" class="form-check-input">
