--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,19 +30,19 @@
 
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="email">邮箱：</label>
-                <input id="email" name="email" type="email" class="form-control" placeholder="请输入邮箱" required>
+                <input id="email" name="email" type="email" class="form-control" placeholder="请输入邮箱" maxlength="50" required>
             </div>
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="nickname">昵称：</label>
-                <input id="nickname" name="name" type="text" class="form-control" placeholder="请输入昵称" required>
+                <input id="nickname" name="name" type="text" class="form-control" placeholder="请输入昵称" maxlength="50" required>
             </div>
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="password">密码：</label>
-                <input id="password" name="password" type="password" class="form-control" placeholder="请输入密码" required>
+                <input id="password" name="password" type="password" class="form-control" placeholder="请输入密码" maxlength="30" required>
             </div>
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="password2">密码：</label>
-                <input id="password2" name="password_confirm" type="password" class="form-control" placeholder="确认密码" required>
+                <input id="password2" name="password_confirm" type="password" class="form-control" placeholder="确认密码" maxlength="30" required>
             </div>
             <button id="TencentCaptcha" data-appid="2068666293" data-cbfn="callback" class="btn btn-primary btn-block" type="button">注册</button>
             <p class="my-3 ml-auto text-muted">已有帐号？<a href="/login">马上登录</a></p>
