--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,7 +30,9 @@
 
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="email">邮箱：</label>
-                <input id="email" name="email" type="email" class="form-control" placeholder="请输入邮箱" maxlength="50" required>
+                <input id="email" name="email" type="email" class="form-control" placeholder="请输入邮箱"
+                       pattern="([A-Z]|[a-z]|[0-9]|-|_)+@([a-z]|[0-9]){2,}.((com|cn)|edu.cn)"
+                       maxlength="50" required>
             </div>
             <div class="form-group" style="margin-bottom:.5rem">
                 <label for="nickname">昵称：</label>
