--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -39,7 +39,7 @@
                             <a class="nav-link mx-2" href="/report-center">实验报告中心</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-2" href="#">
+                            <a class="nav-link mx-2" href="/question">
                                 题库
                                 <span th:if="${#strings.startsWith(view,'/#')}" class="sr-only">(current)</span>
                             </a>
